--- a/index.html
+++ b/index.html
@@ -209,7 +209,8 @@
     <section id="contact" class="section">
       <strong><h2>Contact Us</h2></strong>
       <p>Ready to join the Cannons?</p><br>
-      <p>Contact our recruitment team on Discord:</p>
+      <p>Note our leader cant use Discord so we mainly use reddit.</p><br>
+      <p>Check out our discord!</p>
       <a href="https://discord.gg/8r4st4dv"><p>Discord</p></a>
       <p>Also join our Reddit!</p>
       <a href="https://www.reddit.com/r/RavenousCannons/"><p>RAV-C Reddit</p></a><br><br>
